Add EM algorithm

--- a/From_05_to_07.ipynb
+++ b/From_05_to_07.ipynb
@@ -261,19 +261,26 @@
     "# 7. Conclusions (Draft)\n",
     "\n",
     "### Which streets signs are harder to recognise?\n",
-    "Based on the recall measure labels 1 and 8 are the harsdest to recognize.\n",
+    "Based on the recall measure labels 0 and 1 are the hardest to recognize.\n",
     "### Which street signs are most easily confused?\n",
-    "Based on the confusion matrix the most confused sign is the label 2 and, in order, it's mistaken for labels 1, 8, 0 and 4. \n",
+    "Based on the confusion matrix the most confused signs are the label 0 and 1. \n",
     "### Which attributes (fields) are more reliable and which are less reliable in classification of street signs?\n",
     "By looking at top_2_array we can identify the most reliable features (pixels). By doing some operations like the module we can see those pixels are closer to the centre of the image (or at least don't belong to the borders).\n",
     "Regarding the less reliable pixels we consider the ones with the lowest correlation value with respect to the label.\n",
     "### What was the purpose of Tasks 5 and 6?\n",
     "Prepare the data in a way that we keep the most relevant attributes.\n",
     "### What would happen if the data sets you used in Tasks 4, 5 and 6 were not randomised?\n",
-    "It doens't happen anything, the results are the same.\n",
+    "It doens't happen anything, the results are the same. TODO: Try with preprocessed data.\n",
     "### What would happen if there is cross-correlation between the non-class attributes?\n",
     "There is actually cross-correlation between pixels that are close to each other. As a consecuence of that, if two pixels are correlated (adjacent) to each other, and one of them is included in the top 10 of the most correlated pixels with the label, the other is likely to be in the top 10 as well."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
