--- a/From_08_to_09.ipynb
+++ b/From_08_to_09.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[:5000].to_csv('data/data_gr_5000.csv', encoding='utf-8', sep=',', index=False)"
+    "data[:5000].to_csv('BayesianNetworks/res/data_gr_5000.csv', encoding='utf-8', sep=',', index=False)"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "data_top_2['label'] = labels\n",
     "data_top_2['label'] = data_top_2['label'].map({0: 'zero', 1: 'one', 2: 'two', 3: 'three', 4: 'four', 5: 'five', 6: 'six', 7: 'seven', 8: 'eight', 9: 'nine'})\n",
     "data_top_2 = data_top_2.sample(frac=1).reset_index(drop=True)\n",
-    "data_top_2.to_csv('data/data_top_2.csv', encoding='utf-8', sep=',', index=False)"
+    "data_top_2.to_csv('BayesianNetworks/res/data_top_2.csv', encoding='utf-8', sep=',', index=False)"
    ]
   },
   {
@@ -110,7 +110,7 @@
     "data_top_5['label'] = labels\n",
     "data_top_5['label'] = data_top_5['label'].map({0: 'zero', 1: 'one', 2: 'two', 3: 'three', 4: 'four', 5: 'five', 6: 'six', 7: 'seven', 8: 'eight', 9: 'nine'})\n",
     "data_top_5 = data_top_5.sample(frac=1).reset_index(drop=True)\n",
-    "data_top_5.to_csv('data/data_top_5.csv', encoding='utf-8', sep=',', index=False)"
+    "data_top_5.to_csv('BayesianNetworks/res/data_top_5.csv', encoding='utf-8', sep=',', index=False)"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "data_top_10['label'] = labels\n",
     "data_top_10['label'] = data_top_10['label'].map({0: 'zero', 1: 'one', 2: 'two', 3: 'three', 4: 'four', 5: 'five', 6: 'six', 7: 'seven', 8: 'eight', 9: 'nine'})\n",
     "data_top_10 = data_top_10.sample(frac=1).reset_index(drop=True)\n",
-    "data_top_10.to_csv('data/data_top_10.csv', encoding='utf-8', sep=',', index=False)"
+    "data_top_10.to_csv('BayesianNetworks/res/data_top_10.csv', encoding='utf-8', sep=',', index=False)"
    ]
   },
   {
