--- a/From_05_to_07.ipynb
+++ b/From_05_to_07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Point 5: Deeper analysis of the data\n",
     "\n",
-    "top_2_array = set()\n",
-    "top_5_array = set()\n",
-    "top_10_array = set()\n",
-    "\n",
-    "bottom_2_array = set()\n",
-    "bottom_5_array = set()\n",
-    "bottom_10_array = set()\n",
+    "top_2_array, top_5_array, top_10_array = set(), set(), set()\n",
+    "bottom_2_array, bottom_5_array, bottom_10_array = set(), set(), set()\n",
     "\n",
     "data, _ = preprocessing()\n",
     "\n",
@@ -64,7 +59,7 @@
     "        if i < 5:\n",
     "            top_5_array.add(tup[0])\n",
     "        if i < 10:\n",
-    "            top_10_array.add(tup[0]) #, tup[2]))\n",
+    "            top_10_array.add(tup[0])\n",
     "            \n",
     "    for i, tup in enumerate(corr_label[-10:]):\n",
     "        if i < 2:\n",
@@ -77,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,20 +96,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.63      0.42      0.51       478\n",
-      "           1       0.54      0.34      0.42       591\n",
-      "           2       0.34      0.62      0.44       132\n",
-      "           3       0.66      0.88      0.75       417\n",
-      "           4       0.87      0.74      0.80       717\n",
-      "           5       0.83      0.75      0.79       708\n",
-      "           6       0.50      0.83      0.62       245\n",
-      "           7       0.23      0.90      0.37        86\n",
-      "           8       0.87      0.77      0.82       704\n",
-      "           9       0.57      0.42      0.48       100\n",
+      "           0       0.62      0.46      0.53       462\n",
+      "           1       0.54      0.35      0.42       621\n",
+      "           2       0.41      0.58      0.48       157\n",
+      "           3       0.73      0.88      0.80       431\n",
+      "           4       0.86      0.75      0.80       675\n",
+      "           5       0.85      0.76      0.80       717\n",
+      "           6       0.49      0.84      0.62       267\n",
+      "           7       0.23      0.89      0.36        75\n",
+      "           8       0.86      0.82      0.84       668\n",
+      "           9       0.57      0.43      0.49       105\n",
       "\n",
-      "    accuracy                           0.67      4178\n",
-      "   macro avg       0.60      0.67      0.60      4178\n",
-      "weighted avg       0.71      0.67      0.67      4178\n",
+      "    accuracy                           0.68      4178\n",
+      "   macro avg       0.61      0.67      0.61      4178\n",
+      "weighted avg       0.71      0.68      0.68      4178\n",
       "\n"
      ]
     }
@@ -137,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,20 +141,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.56      0.60      0.58       448\n",
-      "           1       0.61      0.36      0.45       624\n",
-      "           2       0.36      0.69      0.48       131\n",
-      "           3       0.69      0.92      0.79       424\n",
-      "           4       0.88      0.76      0.82       697\n",
-      "           5       0.89      0.81      0.85       701\n",
-      "           6       0.70      0.84      0.76       254\n",
-      "           7       0.30      0.86      0.45        72\n",
-      "           8       0.91      0.84      0.87       717\n",
-      "           9       0.69      0.71      0.70       110\n",
+      "           0       0.60      0.57      0.58       482\n",
+      "           1       0.57      0.36      0.44       594\n",
+      "           2       0.40      0.73      0.51       129\n",
+      "           3       0.76      0.91      0.83       442\n",
+      "           4       0.86      0.79      0.83       703\n",
+      "           5       0.87      0.81      0.84       713\n",
+      "           6       0.67      0.86      0.76       247\n",
+      "           7       0.33      0.88      0.49        77\n",
+      "           8       0.90      0.84      0.87       699\n",
+      "           9       0.64      0.78      0.70        92\n",
       "\n",
-      "    accuracy                           0.72      4178\n",
-      "   macro avg       0.66      0.74      0.67      4178\n",
-      "weighted avg       0.75      0.72      0.73      4178\n",
+      "    accuracy                           0.73      4178\n",
+      "   macro avg       0.66      0.75      0.69      4178\n",
+      "weighted avg       0.75      0.73      0.73      4178\n",
       "\n"
      ]
     }
@@ -182,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,20 +186,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.61      0.62      0.61       493\n",
-      "           1       0.59      0.40      0.48       588\n",
-      "           2       0.47      0.70      0.56       143\n",
-      "           3       0.76      0.95      0.84       421\n",
-      "           4       0.90      0.86      0.88       681\n",
-      "           5       0.95      0.86      0.90       721\n",
-      "           6       0.77      0.87      0.82       266\n",
-      "           7       0.52      0.90      0.66        77\n",
-      "           8       0.91      0.88      0.89       679\n",
-      "           9       0.67      0.85      0.75       109\n",
+      "           0       0.63      0.62      0.63       443\n",
+      "           1       0.64      0.44      0.52       612\n",
+      "           2       0.44      0.76      0.55       137\n",
+      "           3       0.76      0.97      0.85       459\n",
+      "           4       0.90      0.86      0.88       715\n",
+      "           5       0.96      0.87      0.91       723\n",
+      "           6       0.80      0.91      0.85       255\n",
+      "           7       0.60      0.90      0.72        78\n",
+      "           8       0.92      0.87      0.89       658\n",
+      "           9       0.61      0.85      0.71        98\n",
       "\n",
-      "    accuracy                           0.77      4178\n",
-      "   macro avg       0.71      0.79      0.74      4178\n",
-      "weighted avg       0.78      0.77      0.77      4178\n",
+      "    accuracy                           0.79      4178\n",
+      "   macro avg       0.73      0.80      0.75      4178\n",
+      "weighted avg       0.80      0.79      0.79      4178\n",
       "\n"
      ]
     }
@@ -227,25 +222,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[306,  96,  23,  19,   5,   1,  18,  13,   5,   7],\n",
-       "       [171, 238,  69,  20,  15,   5,  49,   7,   8,   6],\n",
-       "       [  9,  14, 100,   1,   1,   0,   1,   5,   9,   3],\n",
-       "       [  0,  11,   5, 399,   2,   0,   0,   0,   2,   2],\n",
-       "       [  0,   4,   7,  42, 588,  24,   0,   6,  10,   0],\n",
-       "       [  1,   9,   2,  15,  35, 617,   0,  10,  20,  12],\n",
-       "       [  8,  20,   1,   5,   0,   0, 232,   0,   0,   0],\n",
-       "       [  0,   0,   1,   0,   2,   0,   0,  69,   1,   4],\n",
-       "       [  6,  11,   4,  27,   5,   2,   0,  18, 595,  11],\n",
-       "       [  3,   0,   2,   0,   2,   0,   0,   4,   5,  93]])"
+       "array([[275,  84,  29,  14,   2,   1,  18,  10,   2,   8],\n",
+       "       [137, 269,  91,  21,  16,   4,  40,   7,   9,  18],\n",
+       "       [ 10,   7, 104,   2,   1,   0,   0,   2,   9,   2],\n",
+       "       [  1,   9,   1, 443,   2,   0,   0,   0,   2,   1],\n",
+       "       [  1,   8,   8,  47, 616,  22,   0,   5,   6,   2],\n",
+       "       [  1,  12,   0,  12,  35, 627,   0,  12,  15,   9],\n",
+       "       [  2,  15,   1,   4,   0,   0, 233,   0,   0,   0],\n",
+       "       [  0,   0,   0,   0,   1,   0,   0,  70,   1,   6],\n",
+       "       [  6,  15,   5,  38,   7,   1,   0,   7, 573,   6],\n",
+       "       [  3,   0,   0,   1,   1,   0,   0,   3,   7,  83]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
