--- a/From_08_to_09.ipynb
+++ b/From_08_to_09.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, labels = preprocessing()\n",
+    "data['label'] = labels\n",
+    "\n",
+    "samples_per_label = 100\n",
+    "\n",
+    "counters = np.zeros(10)\n",
+    "\n",
+    "data = data.sample(frac=1)\n",
+    "selected = []\n",
+    "\n",
+    "for _, dat in data.iterrows():\n",
+    "    l = dat['label'] \n",
+    "    if(counters[l] < samples_per_label):\n",
+    "        selected.append(dat)\n",
+    "        counters[l] = counters[l] + 1\n",
+    "        \n",
+    "selected_df = pd.DataFrame(data=selected, columns=data.columns)\n",
+    "selected_df['label'] = selected_df['label'].map({0: 'zero', 1: 'one', 2: 'two', 3: 'three', 4: 'four', 5: 'five', 6: 'six', 7: 'seven', 8: 'eight', 9: 'nine'})\n",
+    "selected_df.to_csv(f'BayesianNetworks/res/data_gr_{samples_per_label*10}.csv', encoding='utf-8', sep=',', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,16 +67,8 @@
     "data['label'] = labels\n",
     "data = data.sample(frac=1)\n",
     "\n",
-    "data['label'] = data['label'].map({0: 'zero', 1: 'one', 2: 'two', 3: 'three', 4: 'four', 5: 'five', 6: 'six', 7: 'seven', 8: 'eight', 9: 'nine'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[:5000].to_csv('BayesianNetworks/res/data_gr_5000.csv', encoding='utf-8', sep=',', index=False)"
+    "data['label'] = data['label'].map({0: 'zero', 1: 'one', 2: 'two', 3: 'three', 4: 'four', 5: 'five', 6: 'six', 7: 'seven', 8: 'eight', 9: 'nine'})\n",
+    "data.to_csv(f'BayesianNetworks/res/data_gr.csv', encoding='utf-8', sep=',', index=False)"
    ]
   },
   {
