--- a/From_01_to_04.ipynb
+++ b/From_01_to_04.ipynb
@@ -59,20 +59,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.30      0.15      0.20       453\n",
-      "           1       0.24      0.22      0.23       586\n",
-      "           2       0.09      0.80      0.16       136\n",
-      "           3       0.83      0.38      0.52       445\n",
-      "           4       0.81      0.23      0.35       730\n",
-      "           5       0.50      0.46      0.48       728\n",
-      "           6       0.38      0.62      0.47       237\n",
-      "           7       0.11      0.57      0.18        87\n",
-      "           8       0.70      0.10      0.17       682\n",
-      "           9       0.11      0.19      0.14        94\n",
+      "           0       0.29      0.16      0.21       462\n",
+      "           1       0.24      0.24      0.24       607\n",
+      "           2       0.09      0.77      0.15       133\n",
+      "           3       0.78      0.36      0.49       442\n",
+      "           4       0.73      0.19      0.30       685\n",
+      "           5       0.49      0.46      0.47       724\n",
+      "           6       0.41      0.61      0.49       258\n",
+      "           7       0.10      0.57      0.17        77\n",
+      "           8       0.70      0.09      0.16       699\n",
+      "           9       0.12      0.23      0.16        91\n",
       "\n",
-      "    accuracy                           0.30      4178\n",
-      "   macro avg       0.41      0.37      0.29      4178\n",
-      "weighted avg       0.53      0.30      0.32      4178\n",
+      "    accuracy                           0.29      4178\n",
+      "   macro avg       0.40      0.37      0.28      4178\n",
+      "weighted avg       0.51      0.29      0.31      4178\n",
       "\n"
      ]
     }
@@ -118,20 +118,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.47      0.37      0.41       451\n",
-      "           1       0.46      0.47      0.46       630\n",
-      "           2       0.20      0.73      0.32       139\n",
-      "           3       0.79      0.84      0.82       427\n",
-      "           4       0.85      0.81      0.83       716\n",
-      "           5       1.00      0.82      0.90       706\n",
-      "           6       0.77      0.85      0.81       264\n",
-      "           7       0.73      0.76      0.74        78\n",
-      "           8       0.93      0.72      0.81       658\n",
-      "           9       0.81      0.75      0.78       109\n",
+      "           0       0.51      0.38      0.44       479\n",
+      "           1       0.45      0.45      0.45       607\n",
+      "           2       0.22      0.74      0.34       139\n",
+      "           3       0.78      0.85      0.82       463\n",
+      "           4       0.84      0.85      0.85       675\n",
+      "           5       1.00      0.81      0.89       713\n",
+      "           6       0.74      0.82      0.78       245\n",
+      "           7       0.69      0.77      0.73        70\n",
+      "           8       0.96      0.74      0.83       691\n",
+      "           9       0.79      0.83      0.81        96\n",
       "\n",
-      "    accuracy                           0.70      4178\n",
-      "   macro avg       0.70      0.71      0.69      4178\n",
-      "weighted avg       0.75      0.70      0.72      4178\n",
+      "    accuracy                           0.71      4178\n",
+      "   macro avg       0.70      0.72      0.69      4178\n",
+      "weighted avg       0.76      0.71      0.72      4178\n",
       "\n"
      ]
     }
@@ -146,6 +146,35 @@
     "y_pred = gnb.fit(X_train, y_train).predict(X_test)\n",
     "\n",
     "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[184, 154,  60,  35,   1,   0,  31,  10,   3,   1],\n",
+       "       [127, 274, 117,  23,   9,   0,  38,   6,   2,  11],\n",
+       "       [ 11,   9, 103,   8,   3,   0,   0,   0,   5,   0],\n",
+       "       [  5,  55,   9, 393,   1,   0,   0,   0,   0,   0],\n",
+       "       [  1,  55,  28,  12, 576,   0,   0,   1,   2,   0],\n",
+       "       [  0,  26,  49,   0,  59, 575,   0,   0,   4,   0],\n",
+       "       [ 29,   8,   1,   6,   0,   0, 201,   0,   0,   0],\n",
+       "       [  0,   0,   7,   0,   1,   0,   0,  54,   0,   8],\n",
+       "       [  6,  25,  86,  22,  36,   0,   0,   6, 509,   1],\n",
+       "       [  0,   4,   3,   2,   2,   0,   0,   1,   4,  80]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "confusion_matrix(y_test, y_pred)"
    ]
   }
  ],
