--- a/From_01_to_04.ipynb
+++ b/From_01_to_04.ipynb
@@ -36,6 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Preparing the data without preprocessing\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "data, labels = preprocessing(False)\n",
@@ -95,6 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Preparing the data with preprocessing\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "data, labels = preprocessing()\n",
@@ -176,6 +180,75 @@
    "source": [
     "confusion_matrix(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.49      0.39      0.43       575\n",
+      "           1       0.53      0.50      0.51      1025\n",
+      "           2       0.00      0.00      0.00         0\n",
+      "           3       0.75      0.90      0.82       485\n",
+      "           4       0.86      0.83      0.84      1265\n",
+      "           5       1.00      0.81      0.90      1325\n",
+      "           6       0.00      0.00      0.00         0\n",
+      "           7       0.00      0.00      0.00         0\n",
+      "           8       0.98      0.71      0.82      1235\n",
+      "           9       0.00      0.00      0.00         0\n",
+      "\n",
+      "   micro avg       0.71      0.71      0.71      5910\n",
+      "   macro avg       0.46      0.41      0.43      5910\n",
+      "weighted avg       0.81      0.71      0.75      5910\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Trying point 4 without randomizing the data\n",
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "\n",
+    "data, labels = preprocessing()\n",
+    "data['label'] = labels\n",
+    "\n",
+    "samples_per_label = int((len(data) * 0.66) / 10)\n",
+    "\n",
+    "counters = np.zeros(10)\n",
+    "\n",
+    "data = data.sample(frac=1)\n",
+    "selected_train = []\n",
+    "selected_test = []\n",
+    "\n",
+    "for _, dat in data.iterrows():\n",
+    "    l = dat['label'] \n",
+    "    if(counters[l] < samples_per_label):\n",
+    "        selected_train.append(dat)\n",
+    "        counters[l] = counters[l] + 1\n",
+    "    else:\n",
+    "        selected_test.append(dat)\n",
+    "        \n",
+    "df_train = pd.DataFrame(data=selected_train, columns=data.columns)\n",
+    "X_train = df_train.iloc[:, :-1]\n",
+    "y_train = df_train['label']\n",
+    "\n",
+    "df_test = pd.DataFrame(data=selected_test, columns=data.columns)\n",
+    "X_test = df_test.iloc[:, :-1]\n",
+    "y_test = df_test['label']\n",
+    "\n",
+    "gnb = GaussianNB()\n",
+    "y_pred = gnb.fit(X_train, y_train).predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
@@ -194,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
